# sdlgl_test

./: CMakeLists.txt  main.cpp
gk_scripts/gkmenu-0.1.1-gk/games/: sdlgl_test.nut
